# ICP

./: CMakeLists.txt  main.cpp  results.xlsx
ICP/: BaseICP.h  MeasurementHelper.cpp  MeasurementHelper.h  SimpleICP.cpp  SimpleICP.h  TrICP.cpp  TrICP.h
